# AIM

./: .gitignore  AGENTS.md  Cargo.toml  README.md  aim.db  package-lock.json  package.json
frontend/: .webui_secret_key  next.config.ts  package-lock.json  package.json  postcss.config.js  react-markdown.d.ts  tailwind.config.js
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/home/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/new-project/: page.tsx
frontend/src/app/project/: page.tsx
frontend/src/app/project/[projectId]/: page.tsx
frontend/src/app/signup/: page.tsx
frontend/src/components/: CopyableBlock.tsx  HelpModal.tsx  LemmaDetail.tsx  LemmaList.tsx  NavBar.tsx  ProjectDetailClient.tsx  SettingsModal.tsx  TermsModal.tsx
frontend/src/context/: AuthContext.tsx  LanguageContext.tsx
frontend/src/interfaces/: Lemma.tsx
scripts/: cancel_running_projects.sh  migrate_reviewer.sh
src/: agents.rs  aim.rs  main.rs  sessions.rs  utils.rs
src/server/: app.rs  mod.rs
src/server/entity/: mod.rs  user.rs
