[package]
name = "aim"
version = "0.1.0"
edition = "2024"
description = "The AI Mathematician (Working in Process)"

[dependencies]
async-trait = "0.1.88"
clap = { version = "4.5.40", features = ["derive"] }
dotenvy = "0.15.7"
env_logger = "0.11.8"
futures = "0.3.31"
futures-util = "0.3.31"
indicatif = "0.17.11"
log = "0.4.27"
regex = "1.11.1"
reqwest = { version = "0.12.20", features = ["json", "stream"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
tokio-util = "0.7.15"
tracing = "0.1.41"
