[package]
name = "aim"
version = "0.1.2-beta"
edition = "2024"
description = "The AI Mathematician (Working in Process)"

[dependencies]
actix-cors = "0.7.1"
actix-files = "0.6.6"
actix-web = "4.11.0"
async-trait = "0.1.88"
clap = { version = "4.5.40", features = ["derive"] }
dotenvy = "0.15.7"
env_logger = "0.11.8"
futures = "0.3.31"
futures-util = "0.3.31"
indicatif = "0.17.11"
log = "0.4.27"
regex = "1.11.1"
reqwest = { version = "0.12.20", features = ["json", "stream"] }
sea-orm = { version = "1.1.12", features = ["sqlx-sqlite", "runtime-actix-native-tls"] }
chrono = { version = "0.4", features = ["serde"] }
bcrypt = "0.17.0"
jsonwebtoken = "9.3.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
tokio-util = "0.7.15"
tracing = "0.1.41"
